# laino-pocket

./: .gitignore  .gitmodules  README.md  USER_GUIDE.md  platformio.ini
docs/: dictionary.md  epub-toc-navigation.md  file-formats.md
lib/EpdFont/: EpdFont.cpp  EpdFontData.h  FontDecompressor.cpp  SdCardFont.cpp  SdCardFont.h  SdCardFontManager.cpp  SdCardFontManager.h
lib/EpdFont/builtinFonts/: notosans_8_regular.h  ubuntu_10_bold.h  ubuntu_10_regular.h  ubuntu_12_bold.h  ubuntu_12_regular.h
lib/EpdFont/scripts/: build-font-ids.sh  convert-builtin-fonts.sh
lib/Epub/: Epub.cpp  Epub.h
lib/Epub/Epub/: BookMetadataCache.cpp  BookMetadataCache.h  Page.cpp  Page.h  Section.cpp  Section.h
lib/GfxRenderer/: FontCacheManager.cpp  FontCacheManager.h  GfxRenderer.cpp  GfxRenderer.h
lib/I18n/translations/: belarusian.yaml  catalan.yaml  czech.yaml  danish.yaml  dutch.yaml  english.yaml  finnish.yaml  french.yaml  german.yaml  hebrew.yaml  hungarian.yaml  italian.yaml  kazakh.yaml  lithuanian.yaml  norwegian.yaml  polish.yaml  portuguese-BR.yaml  portuguese-PT.yaml  romanian.yaml  russian.yaml  slovak.yaml  slovenian.yaml  spanish.yaml  swedish.yaml  turkish.yaml  ukrainian.yaml  valencian.yaml  vietnamese.yaml
lib/KOReaderSync/: BookXPath.cpp  BookXPath.h  KOReaderCredentialStore.cpp  KOReaderPosition.h  KOReaderSyncClient.cpp  KOReaderSyncClient.h  ProgressMapper.h
lib/Logging/: Logging.cpp
lib/Memory/: BuildScratch.cpp  BuildScratch.h
lib/MiniBidi/: BidiUtils.cpp  BidiUtils.h  bidiclasses.t  minibidi.c  minibidi.h
lib/OpdsParser/: OpdsParser.cpp
lib/PngToBmpConverter/: PngToBmpConverter.cpp
lib/Serialization/: BufferedFile.h  PersistableStore.cpp
lib/ZipFile/: ZipFile.cpp
lib/hal/: HalClock.cpp  HalClock.h  HalClockDateTime.cpp  HalClockDateTime.h  HalDisplay.cpp  HalDisplay.h  HalPowerManager.cpp
lib/miniz/src/: MinizConfig.h
scripts/: gen_icons.sh  generate_br_section_break_epub.py  git_branch.py  pocket_pairing_cross_preflight.sh  update_hyphenation.sh
src/: BleInput.cpp  BleInput.h  ClockSyncPolicy.h  CrossPointSettings.h  HeapMap.cpp  HeapMap.h  JsonSettingsIO.cpp  MappedInputManager.cpp  MappedInputManager.h  OpdsServerStore.cpp  OpdsServerStore.h  RecentBooksStore.cpp  RecentBooksStore.h  SdCardFontSystem.h  SettingsList.h  SilentRestart.h  WifiCredentialStore.cpp  WifiCredentialStore.h  fontIds.h  main.cpp
src/activities/: Activity.h  ActivityManager.cpp  ActivityManager.h
src/activities/boot_sleep/: SleepActivity.cpp
src/activities/browser/: OpdsBookBrowserActivity.cpp  OpdsBookBrowserActivity.h
src/activities/home/: CrashActivity.cpp  FileBrowserActivity.cpp  HomeActivity.cpp  HomeActivity.h  RecentBooksActivity.cpp
src/activities/network/: CrossPointWebServerActivity.cpp  WifiSelectionActivity.cpp  WifiSelectionActivity.h
src/activities/pocket/: PocketActivity.cpp  PocketActivity.h  PocketBundleCache.cpp  PocketBundleCache.h  PocketBundleRuntime.cpp  PocketBundleRuntime.h  PocketBundleWorker.cpp  PocketBundleWorker.h  PocketCard.cpp  PocketCard.h  PocketCardFixture.cpp  PocketCardFixture.h  PocketCardParser.cpp  PocketCardParser.h  PocketCardRenderer.cpp  PocketCardRenderer.h  PocketCardSelection.h  PocketCredential.cpp  PocketCredential.h  PocketCredentialStorage.cpp  PocketCredentialStore.cpp  PocketCredentialStore.h  PocketFirmwareIdentity.h  PocketHttpsProbe.cpp  PocketHttpsProbe.h  PocketHttpsProbeActivity.cpp  PocketHttpsProbeActivity.h  PocketHttpsProbeTransport.cpp  PocketHttpsProbeTransport.h  PocketPairingActivity.cpp  PocketPairingActivity.h  PocketPairingClient.cpp  PocketPairingClient.h  PocketPairingProtocol.cpp  PocketPairingProtocol.h  PocketPairingTransport.cpp  PocketPairingTransport.h  PocketPairingTransportPolicy.cpp  PocketPairingTransportPolicy.h  PocketPairingWorker.cpp  (+20 more)
src/activities/reader/: DictionaryDefinitionActivity.cpp  DictionaryDefinitionActivity.h  DictionaryWordSelectActivity.cpp  DictionaryWordSelectActivity.h  EpubReaderActivity.cpp  EpubReaderActivity.h  EpubReaderBookmarksActivity.cpp  EpubReaderChapterSelectionActivity.cpp  EpubReaderFootnotesActivity.cpp  EpubReaderFootnotesActivity.h  EpubReaderMenuActivity.cpp  EpubReaderMenuActivity.h  EpubReaderPercentSelectionActivity.cpp  EpubReaderPercentSelectionActivity.h  EpubReaderUtils.h  FreeInkPageRenderer.h  KOReaderSyncActivity.cpp  KOReaderSyncActivity.h  QrDisplayActivity.cpp  ReaderActivity.cpp  ReaderActivity.h  ReaderUtils.h  XtcReaderActivity.cpp  XtcReaderChapterSelectionActivity.cpp
src/activities/settings/: BleButtonMapActivity.cpp  BluetoothSettingsActivity.cpp  BluetoothSettingsActivity.h  ClearCacheActivity.cpp  ClockOffsetActivity.cpp  ClockOffsetActivity.h  ClockSyncActivity.cpp  FontDownloadActivity.cpp  (+12 more)
src/components/: UITheme.cpp
src/network/: CrossPointWebServer.cpp  HttpDownloader.cpp  OtaReleaseChannel.h  OtaUpdater.cpp
src/util/: BookCacheUtils.cpp  BookCoverUtils.cpp  BookCoverUtils.h  DictZip.cpp  DictZip.h  Dictionary.cpp  Dictionary.h  DictionaryRegistry.cpp  DictionaryRegistry.h  HtmlToPlainText.cpp  HtmlToPlainText.h
test/: CMakeLists.txt
test/book_xpath/: BookXPathTest.cpp  CMakeLists.txt
test/book_xpath/shim/: Logging.h
test/clock_sync_policy/: CMakeLists.txt  ClockSyncPolicyTest.cpp
test/combining_marks/: CMakeLists.txt  CombiningMarkAnchorTest.cpp
test/epubs/: test_br_section_break.epub
test/hal_clock_date_time/: CMakeLists.txt  HalClockDateTimeTest.cpp
test/minibidi_arabic/: CMakeLists.txt  MiniBidiArabicTest.cpp
test/minibidi_arabic/stubs/: Logging.h
test/pocket_bundle_cache/: CMakeLists.txt  PocketBundleCacheTest.cpp
test/pocket_card_parser/: CMakeLists.txt  PocketCardParserTest.cpp
test/pocket_cards/: CMakeLists.txt  PocketCardsTest.cpp
test/pocket_https_probe/: CMakeLists.txt  PocketHttpsProbeTest.cpp
test/pocket_pairing/: CMakeLists.txt  PocketPairingPreflight.cpp  PocketPairingTest.cpp
test/pocket_reading/: CMakeLists.txt  PocketReadingTest.cpp
test/pocket_snapshot/: CMakeLists.txt  PocketSnapshotTest.cpp
test/release_json_parser/: ReleaseJsonParserTest.cpp
(+18 files in other folders)
